syntax = "proto3";

package buy;
option go_package="./buy";

service Buy {
  rpc SetProducts(BuyProductsRequest) returns (BuyProductsResponse);
  rpc SetOrder(SetOrderRequest) returns (SetOrderResponse);
}

message BuyProductsRequest {
}

message BuyProductsResponse {
  repeated Product products = 1;
}

message SetOrderRequest {
  int64 user_id = 1;
  int64 product_id = 2;
}

message SetOrderResponse {
}

message Product {
  int64 product_id = 1;
  string name = 2;
  string desc = 3;
  string image = 4;
  int64 stock = 5;
  int64 create_time = 6;
}